--- a/src/app/entidades/local/atualizar/atualizar.module.css
+++ b/src/app/entidades/local/atualizar/atualizar.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    min-width: 100vw; 
     min-height: 100vh; 
     margin: 0;
     overflow: auto; 
