--- a/src/app/entidades/local/cadastro/cadastro.module.css
+++ b/src/app/entidades/local/cadastro/cadastro.module.css
@@ -3,8 +3,9 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh; 
     margin: 0;
+    overflow: auto; 
 }
 
 .container_title {
