--- a/src/app/entidades/local/local.module.css
+++ b/src/app/entidades/local/local.module.css
@@ -8,6 +8,7 @@
     margin: 20px auto;
     padding: 20px;
     max-width: 90%;
+    min-width: 90vw;
     border-radius: 8px;
     /* background-color: #f9f9f9;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
