--- a/src/app/entidades/local/atualizar/atualizar.module.css
+++ b/src/app/entidades/local/atualizar/atualizar.module.css
@@ -111,14 +111,14 @@
 
 .container_description {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
     width: 100%;
     height: 12rem;
     border-collapse: collapse;
     border-radius: 8px;
     overflow: hidden;
-    padding: 10px;
+    padding: 0;
     padding-left: 0;
     flex-grow: 1;
 }
@@ -134,17 +134,21 @@
 
 .container_description .container_text {
     height: 100%; 
+    flex-grow: 1; 
+    height: 100%;
+    border: none;
 }
 
 .container_description textarea {
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box; 
-    resize: none; 
+    width: 100%; /* Garante que ocupe toda a largura */
+    height: 100%; /* Ajusta a altura ao contêiner */
+    border: none; /* Evita bordas extras */
+    border-radius: 4px; /* Arredondamento */
+    padding: 10px; /* Espaçamento interno */
+    resize: none; /* Evita redimensionamento manual */
+    box-sizing: border-box; /* Inclui padding e border no tamanho total */
 }
+
 
 
 .button_container {
