--- a/src/app/entidades/servico/atualizar/atualizar.module.css
+++ b/src/app/entidades/servico/atualizar/atualizar.module.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    min-width: 100vw; 
     min-height: 100vh; 
+    min-width: 100vw; 
     margin: 0;
     overflow: auto; 
 }
@@ -111,17 +111,16 @@
 
 .container_description {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-direction: column;
     width: 100%;
-    height: 6rem;
+    height: 12rem;
     border-collapse: collapse;
     border-radius: 8px;
     overflow: hidden;
-    padding: 0;
+    padding: 10px;
     padding-left: 0;
     flex-grow: 1;
-    background-color: #000;
 }
 
 .container_description p {
@@ -135,15 +134,12 @@
 
 .container_description .container_text {
     height: 100%; 
-    flex-grow: 1; 
-    height: 100%;
-    border: none;
-    background-color: #000;
 }
 
 .container_description textarea {
     width: 100%;
     height: 100%;
+    padding: 10px;
     border: 2px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box; 
