--- a/src/app/entidades/servico/cadastro/cadastro.module.css
+++ b/src/app/entidades/servico/cadastro/cadastro.module.css
@@ -3,10 +3,8 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    min-width: 100vw; 
-    min-height: 100vh; 
+    height: 100vh;
     margin: 0;
-    overflow: auto; 
 }
 
 .container_title {
@@ -35,7 +33,7 @@
     flex-direction: column;
     justify-content: flex-start;
     width: 95%;
-    height: auto;
+    height: 35rem;
     border-collapse: collapse;
     border-radius: 8px;
     overflow: hidden;
@@ -100,28 +98,20 @@
     border-radius: 4px;  
     box-sizing: border-box; 
 }
-.container_text select {
-    width: 100%;
-    height: 100%;
-    padding: 10px;  
-    border: 1px solid #ccc;
-    border-radius: 4px;  
-    box-sizing: border-box; 
-}
+
 
 .container_description {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-direction: column;
     width: 100%;
-    height: 6rem;
+    height: 12rem;
     border-collapse: collapse;
     border-radius: 8px;
     overflow: hidden;
-    padding: 0;
+    padding: 10px;
     padding-left: 0;
     flex-grow: 1;
-    background-color: #000;
 }
 
 .container_description p {
@@ -135,21 +125,17 @@
 
 .container_description .container_text {
     height: 100%; 
-    flex-grow: 1; 
-    height: 100%;
-    border: none;
-    background-color: #000;
 }
 
 .container_description textarea {
     width: 100%;
     height: 100%;
+    padding: 10px;
     border: 2px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box; 
     resize: none; 
 }
-
 
 .button_container {
     display: flex;
