--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,29 @@
 :root {
-  --blue-header: #2C1482;
-  --background: #fff;
+	--blue-header: #2C1482;
+	--white-elements: #FFFFFF;
+	--background: #fff;
 }
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  	-webkit-text-size-adjust: 100%;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	max-width: 100vw;
+	overflow-x: hidden;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	color: var(--foreground);
+	background: var(--background);
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 a {
@@ -35,8 +31,15 @@ a {
   text-decoration: none;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-} */
+.container  {
+	/* background: green; */
+	max-width: 1300px;
+	margin: 0 auto;
+	padding: 30px 20px;
+}
+
+.section-title {
+	font-size: 1.8rem;
+	font-weight: 600;
+	text-transform: capitalize;
+}
