--- a/src/app/entidades/servico/cadastro/cadastro.module.css
+++ b/src/app/entidades/servico/cadastro/cadastro.module.css
@@ -3,8 +3,10 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 100vh;
+    min-width: 100%; 
+    min-height: auto; 
     margin: 0;
+    overflow: auto; 
 }
 
 .container_title {
@@ -13,7 +15,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 10%;
+    height: 5rem;
     margin: 0;
     padding: 50px;
     border-bottom: 2px solid #000000;
@@ -33,7 +35,7 @@
     flex-direction: column;
     justify-content: flex-start;
     width: 95%;
-    height: 35rem;
+    height: auto;
     border-collapse: collapse;
     border-radius: 8px;
     overflow: hidden;
@@ -98,7 +100,15 @@
     border-radius: 4px;  
     box-sizing: border-box; 
 }
-
+.container_text textarea {
+    width: 100%;
+    height: 100%;
+    padding: 10px;  
+    border: 1px solid #ccc;
+    border-radius: 4px;  
+    box-sizing: border-box; 
+    resize: none; 
+}
 
 .container_description {
     display: flex;
@@ -127,23 +137,12 @@
     height: 100%; 
 }
 
-.container_description textarea {
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box; 
-    resize: none; 
-}
-
 .button_container {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%; 
-    margin-top: 20px; 
-    margin-bottom: 20px; 
+    margin-top: 40px; 
 }
 
 .button {
