--- a/src/app/entidades/login/login.module.css
+++ b/src/app/entidades/login/login.module.css
@@ -1,3 +1,23 @@
+.modalOverlay {
+    position: fixed;
+    top: 15%;
+    left: 50%;
+    transform: translateX(-50%);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modalContent {
+    border-radius: 8px;
+    max-width: 500px;
+    width: 100%;
+    position: relative;
+}
+
+
 .container{
     display: flex;
     justify-content: space-between;
@@ -8,6 +28,27 @@
     border-radius: 6%;
     border:2px solid black;
     overflow: hidden;
+    background-color: white;
+}
+
+.close_button{
+    height: 3rem;
+    width: 3rem;
+    position: absolute;
+    top: 20px;
+    right: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
+    cursor: pointer; 
+    border: none;
+    background-color: white;
+}
+.close_button h3{
+    color: black;
+    font-family: var(--font_main);
+    font-size: 2rem;
 }
 
 .container_title{
@@ -86,7 +127,7 @@
 }
 
 .button{
-    background-color: blue; 
+    background-color: var(--blue-header);
     color: #fff; 
     border: none;
     padding: 10px 20px;
@@ -97,14 +138,14 @@
     margin-right: 1rem;
     margin-left: 1rem;
 }
-
 .button:hover {
     background-color: lightseagreen; 
 }
 
 
+
 .container_footer{
-    background-color: blue;
+    background-color: var(--blue-header);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -113,4 +154,19 @@
 }
 .container_footer p{
     color: white;
+}
+.container_footer button{
+    width: auto;
+    background-color: var(--blue-header);
+    color: white; 
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    margin: 1px;
+    padding: 4px;
+}
+.container_footer button:hover {
+    background-color: var(--blue-header);
 }
