--- a/src/app/entidades/local/cadastro/cadastro.module.css
+++ b/src/app/entidades/local/cadastro/cadastro.module.css
@@ -146,8 +146,8 @@
 }
 
 .button {
-    background-color: blue; /* Cor de fundo do botão */
-    color: #fff; /* Cor do texto do botão */
+    background-color: blue; 
+    color: #fff; 
     border: none;
     padding: 10px 20px;
     font-size: 16px;
@@ -159,5 +159,5 @@
 }
 
 .button:hover {
-    background-color: lightseagreen; /* Cor do botão ao passar o mouse */
+    background-color: lightseagreen; 
 }
